# GlideGifDemo

./: readme.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/goach/glidegifdemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/giflib/: openbsd-reallocarray.c
app/src/main/java/com/goach/glidegifdemo/: GifDecoder.kt  GifExtension.java  GifGlideModel.kt  GifResource.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/goach/glidegifdemo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
